--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "convert-aster-test",
+  "name": "convert-aster",
   "version": "0.0.0",
   "dependencies": {
     "sass-bootstrap": "~3.0.0",
-    "modernizr": "~2.6.2",
-    "jquery": "~1.10.2"
+    "jquery": "~1.10.2",
+    "bootstrap": "~3.0.2"
   },
   "devDependencies": {}
 }
