--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "grunt-contrib-watch": "~0.5.2",
     "grunt-rev": "~0.1.0",
     "grunt-autoprefixer": "~0.2.0",
-    "grunt-usemin": "~0.1.10",
+    "grunt-usemin": "~2.0.0",
     "grunt-mocha": "~0.4.0",
-    "grunt-modernizr": "~0.3.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-concurrent": "~0.3.0",
     "load-grunt-tasks": "~0.1.0",
-    "time-grunt": "~0.1.1"
+    "time-grunt": "~0.1.1",
+    "jshint-stylish": "~0.1.3"
   },
   "engines": {
     "node": ">=0.8.0"
