--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "convert-aster",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "express": "2.5.8",
+    "jade": ">= 0.0.1"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
